--- a/clients/user-ui/src/app/globals.css
+++ b/clients/user-ui/src/app/globals.css
@@ -19,15 +19,15 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-          to bottom,
-          transparent,
-          rgb(var(--background-end-rgb))
-  )
-  rgb(var(--background-start-rgb));
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 
 /* Firefox */
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
 /* Chrome, Safari, Edge, Opera */
@@ -59,16 +59,16 @@ input::-webkit-inner-spin-button {
 }
 
 .banner {
-  background-image: url("https://framerusercontent.com/images/ox1tg69dwg5TMb6flK8EvAlTY.png");
+  background-image: url('https://framerusercontent.com/images/ox1tg69dwg5TMb6flK8EvAlTY.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .backdrop_shaders {
   background: radial-gradient(
-          50% 50% at 50% 50%,
-          #180f34 0%,
-          rgba(0, 0, 0, 0) 100%
+    50% 50% at 50% 50%,
+    #180f34 0%,
+    rgba(0, 0, 0, 0) 100%
   );
   flex: none;
   inset: -273px 290px 51px -557px;
